Utiliation de TicketQueue pour la gestion de la file
